Fix all the contrast errors

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -16,3 +16,5 @@ $white: #fff;
 $grey-border: #C1C7D0;
 
 $border-btn: #67798E;
+
+$btn-color: #ebebebe3;
