--- a/src/styles/components/About.scss
+++ b/src/styles/components/About.scss
@@ -27,6 +27,7 @@
     a {
       background-color: $green;
       border: 1px solid $green;
+      color: $btn-color;
     }
   }
 }
@@ -55,7 +56,8 @@
       .lang-tag {
         padding: 4px 5px 4px 5px;
         margin: 12px 5px 20px 5px;
-        color: $green;
+        // color: $green;
+        color: #008552;
         background: $white;
         border: 1px solid $white;
         border-radius: 5px;
