--- a/src/styles/components/Contact.scss
+++ b/src/styles/components/Contact.scss
@@ -40,6 +40,7 @@
       button {
         background: $green;
         border: 1px solid $green;
+        color: $btn-color;
       }
     }
   }
