--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -139,7 +139,7 @@
         color: $blue;
       }
       h2 {
-        color: $green;
+        color: #008552;
 
       }
       p {
